app/assets/stylesheets/base.css.scss
@import "variables.css.scss";


/*1. Typography
2. Elements
3. Grid/Layout
4. Sections*/

html,
body {
  width: 100%;
  height: 100%;
}

/* 1- Typography*/
body,
header, 
section, 
footer, 
h1, 
h2, 
h3,
h4, 
h5, 
h6,
p, 
.btn,
.modal,
.nav {
  font-family: $main-font;
  font-weight: 700;
  letter-spacing: 1px;
}

h1 {
  font-size: 3rem;
}

h2 {
  font-size: 2.75rem;
}

h3 {
  font-size: 2.25rem;
}

h4 {
  font-size: 1.85rem;
}

h5 {
  font-size: 1.75rem;
}

h6 {
  font-size: 1.5rem;
}

p {
  font-size: 1.35rem;
}

a {
  color: $link-font-color
}
a:hover {
  color: $link-hover-font-color;
}

/*2 - Elements*/

.clickable {
  cursor: pointer;
}

img {
  max-width: 100%;
}

.btn-circle {
  margin-top: 15px;
  padding: 7px 16px;
  font-size: 40px;
  color: $palette-orangered;
  background: 0 0;
  border-radius: 50%;
  -webkit-transition: background .3s ease-in-out;
  -moz-transition: background .3s ease-in-out;
  transition: background .3s ease-in-out;
}

.btn-circle:hover,
.btn-circle:focus {
  outline: 0;
  color: $palette-gray2;
  
}

.btn-circle i.animated {
  -webkit-transition-property: -webkit-transform;
  -webkit-transition-duration: 1s;
  -moz-transition-property: -moz-transform;
  -moz-transition-duration: 1s;
}

.btn-circle:hover i.animated {
  -webkit-animation-name: pulse;
  -moz-animation-name: pulse;
  -webkit-animation-duration: 1.5s;
  -moz-animation-duration: 1.5s;
  -webkit-animation-iteration-count: infinite;
  -moz-animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
  -moz-animation-timing-function: linear;
}



/*3 - Grid/Layout*/
.row {
  margin-left:0;
  margin-right:0;
}

@media screen and (min-width: 768px) {
  .equal, .equal > div[class*='col-'] {  
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex:0 auto;
  }
}

section .container {
  padding-left:0;
  padding-right:0;
}

.section-title{
  text-align:center; 
  text-transform: uppercase;
  padding: 1.4rem 0;
  font-weight: 600;
  color: $palette-blue5;
}

@media (min-width: 768px) {
  .section-title {
    font-size: 4rem;
  }
}

.cover {
  display: table;
  width: 100%;
  height: 100%;
  padding: 100px 0;
  text-align: center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  
  .cover-body {
    display: table-cell;
    vertical-align: middle;

    .brand-heading {
      font-size: 40px;
    }
    .intro-text {
      font-size: 18px;
    }
  }
}

.whitespace {
  display: table;
  height: 40%;
  width: 100%;
}

@media(min-width:768px) {
  .cover {
    padding: 0;
  }

  .cover .cover-body .brand-heading {
    font-size: 100px;
  }

  .cover .cover-body .intro-text {
    font-size: 26px;
  }
}

@media (min-width: 1200px) {
  .header .container {
    width: 100%;
  }
}

.padding-0{
  padding: 0;
}

/*4 - Sections*/
.navbar-default, 
#google_translate_element .goog-te-gadget-simple, 
#google_translate_element span a,
.navbar-default .navbar-toggle,
.header {
  background-color: $palette-white;
  color: $palette-black;
}
.school-info-section {
  background-color: $palette-white;
}
.take-action-section {
  background: $palette-white;
  color: $palette-black;
}

#aboutModal {
  z-index: 99999;
}

#aboutModal .modal-title{
  font-size: 1.5em;
  color: white;
}

#next-steps {
  text-align: center;
  padding-top:2em;
}

